[package]
name = "oldgravy"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
env_logger = "0.11.3"
futures = "0.3.30"
log = "0.4.21"
rand = "0.8.5"
rayon = "1.10.0"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
youtube_dl = { version = "0.10.0", features = ["tokio"] }
